--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0",
   "description": "A library of reusable hooks, utilities, and components for React Router v7",
   "type": "module",
-  "main": "dist/r3-utils.umd.js",
-  "module": "dist/r3-utils.es.js",
+  "main": "dist/r3-utils.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
+
   "scripts": {
     "dev": "vite",
-    "build": "rimraf dist && tsc -p tsconfig.dts.json && tsc-alias -p tsconfig.dts.json && vite build",
+    "build": "rimraf dist && vite build && tsc -p tsconfig.dts.json --listEmittedFiles && tsc-alias -p tsconfig.dts.json",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,6 +24,7 @@
     "components",
     "typescript"
   ],
+
   "author": "",
   "license": "MIT",
   "packageManager": "pnpm@10.5.2",
