--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "peerDependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.0.0"
+    "react-router": "^7.0.0",
+    "@bonny-kato/localstorage": "^0.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
@@ -49,10 +50,8 @@
     "react-router": "^7.3.0",
     "rimraf": "^6.0.1",
     "tsc-alias": "^1.8.11",
+    "@bonny-kato/localstorage": "^0.0.2",
     "typescript": "^5.8.2",
     "vite": "^6.2.2"
-  },
-  "dependencies": {
-    "@bonny-kato/localstorage": "^0.0.2"
   }
 }
