--- a/package.json
+++ b/package.json
@@ -1,10 +1,44 @@
 {
-  "name": "r3-utils",
-  "version": "1.0.0",
+  "name": "@bonny-kato/r3-utils",
+  "version": "0.0.3",
   "description": "A library of reusable hooks, utilities, and components for React Router v7",
   "type": "module",
   "main": "dist/r3-utils.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    "./auth": {
+      "import": "./dist/auth/index.js",
+      "types": "./dist/auth/index.d.ts"
+    },
+    "./cache": {
+      "import": "./dist/cache/index.js",
+      "types": "./dist/cache/index.d.ts"
+    },
+    "./access-control": {
+      "import": "./dist/access-control/index.js",
+      "types": "./dist/access-control/index.d.ts"
+    },
+    "./hooks": {
+      "import": "./dist/hooks/index.js",
+      "types": "./dist/hooks/index.d.ts"
+    },
+    "./http-client": {
+      "import": "./dist/http-client/index.js",
+      "types": "./dist/http-client/index.d.ts"
+    },
+    "./utils": {
+      "import": "./dist/utils/index.js",
+      "types": "./dist/utils/index.d.ts"
+    },
+    "./constants": {
+      "import": "./dist/constants/index.js",
+      "types": "./dist/constants/constants.d.ts"
+    },
+    "./zod-common": {
+      "import": "./dist/zod-common/index.js",
+      "types": "./dist/zod-common/index.d.ts"
+    }
+  },
   "files": [
     "dist"
   ],
@@ -13,7 +47,8 @@
     "build": "rimraf dist && vite build && tsc -p tsconfig.dts.json --listEmittedFiles",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "publish": "npm publish --access public"
   },
   "keywords": [
     "react",
@@ -27,12 +62,19 @@
   "license": "MIT",
   "packageManager": "pnpm@10.5.2",
   "peerDependencies": {
+    "@bonny-kato/localstorage": "^0.0.2",
+    "@bonnykato/simple-db": "^1.0.10",
+    "axios": "^1.8.3",
+    "dayjs": "^1.11.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.0.0",
-    "@bonny-kato/localstorage": "^0.0.2"
+    "react-hook-form": "^7.54.2",
+    "react-router": "^7.3.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@bonny-kato/localstorage": "^0.0.2",
+    "@bonnykato/simple-db": "^1.0.10",
     "@eslint/js": "^9.22.0",
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
@@ -40,6 +82,8 @@
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
     "@vitejs/plugin-react": "^4.3.4",
+    "axios": "^1.8.3",
+    "dayjs": "^1.11.13",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-react": "^7.37.4",
@@ -47,11 +91,16 @@
     "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-router": "^7.3.0",
+    "remix-toast": "^2.0.0",
     "rimraf": "^6.0.1",
     "tsc-alias": "^1.8.11",
-    "@bonny-kato/localstorage": "^0.0.2",
     "typescript": "^5.8.2",
-    "vite": "^6.2.2"
+    "vite": "^6.2.2",
+    "zod": "^3.24.2"
+  },
+  "dependencies": {
+    "ioredis": "^5.6.0"
   }
 }
