--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router": "^7.3.0",
+    "ioredis": "^5.6.0",
     "zod": "^3.24.2"
   },
   "publishConfig": {
@@ -126,11 +127,9 @@
     "standard-version": "^9.5.0",
     "tsc-alias": "^1.8.11",
     "typescript": "^5.8.2",
+    "ioredis": "^5.6.0",
     "vite": "^6.2.2",
     "zod": "^3.24.2"
-  },
-  "dependencies": {
-    "ioredis": "^5.6.0"
   },
   "lint-staged": {
     "src/**/*.+(js|ts|tsx|jsx|json)": [
