--- a/package.json
+++ b/package.json
@@ -53,14 +53,12 @@
     "prepare": "husky",
     "typecheck": "tsc",
     "lint-staged": "npx lint-staged",
-
     "prepublishOnly": "pnpm run lint && pnpm run test",
     "release:patch": "npm version patch && npm run build && pnpm publish --access public && git push --follow-tags",
     "release:minor": "npm version minor && npm run build && pnpm publish --access public && git push --follow-tags",
     "release:major": "npm version major && npm run build && pnpm publish --access public && git push --follow-tags",
     "release:alpha": "npm version prepatch --preid alpha && pnpm run build && npm publish --access public --tag alpha && git push --follow-tags",
     "release:beta": "npm version prepatch --preid beta && pnpm run build && npm publish --access public --tag beta && git push --follow-tags"
-
   },
   "keywords": [
     "react",
@@ -86,11 +84,11 @@
     "@bonnykato/simple-db": "^1.0.10",
     "axios": "^1.8.3",
     "dayjs": "^1.11.13",
+    "ioredis": "^5.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router": "^7.3.0",
-    "ioredis": "^5.6.0",
     "zod": "^3.24.2"
   },
   "publishConfig": {
@@ -116,6 +114,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
     "husky": "^9.1.7",
+    "ioredis": "^5.6.0",
     "lint-staged": "^15.5.0",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
@@ -124,10 +123,10 @@
     "react-router": "^7.3.0",
     "remix-toast": "^2.0.0",
     "rimraf": "^6.0.1",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "standard-version": "^9.5.0",
     "tsc-alias": "^1.8.11",
     "typescript": "^5.8.2",
-    "ioredis": "^5.6.0",
     "vite": "^6.2.2",
     "zod": "^3.24.2"
   },
