chore: initial migration

--- a/package.json
+++ b/package.json
@@ -3,48 +3,18 @@
   "version": "2.3.4",
   "description": "A library of reusable hooks, utilities, and components for React Router v7",
   "type": "module",
-  "main": "dist/r3-utils.js",
-  "types": "dist/index.d.ts",
   "exports": {
-    "./auth": {
-      "import": "./dist/auth/index.js",
-      "types": "./dist/auth/index.d.ts"
-    },
-    "./cache": {
-      "import": "./dist/cache/index.js",
-      "types": "./dist/cache/index.d.ts"
-    },
-    "./access-control": {
-      "import": "./dist/access-control/index.js",
-      "types": "./dist/access-control/index.d.ts"
-    },
-    "./hooks": {
-      "import": "./dist/hooks/index.js",
-      "types": "./dist/hooks/index.d.ts"
-    },
-    "./http-client": {
-      "import": "./dist/http-client/index.js",
-      "types": "./dist/http-client/index.d.ts"
-    },
-    "./utils": {
-      "import": "./dist/utils/index.js",
-      "types": "./dist/utils/index.d.ts"
-    },
-    "./constants": {
-      "import": "./dist/constants/index.js",
-      "types": "./dist/constants/constants.d.ts"
-    },
-    "./zod-common": {
-      "import": "./dist/zod-common/index.js",
-      "types": "./dist/zod-common/index.d.ts"
-    }
+    "./access-control": "./dist/access-control/index.js",
+    "./cache": "./dist/cache/index.js",
+    "./hooks": "./dist/hooks/index.js",
+    "./package.json": "./package.json"
   },
   "files": [
     "dist"
   ],
   "scripts": {
-    "dev": "vite",
-    "build": "rimraf dist && vite build && tsc -p tsconfig.dts.json --listEmittedFiles",
+    "dev": "tsdown --watch",
+    "build": "tsdown",
     "lint": "eslint --config eslint.config.ts . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "test": "vitest --typecheck",
@@ -79,23 +49,15 @@
   "license": "MIT",
   "packageManager": "pnpm@10.14.0",
   "peerDependencies": {
-    "@bonny-kato/localstorage": "^0.0.2",
-    "@bonnykato/simple-db": "^1.0.10",
-    "axios": "^1.8.3",
-    "dayjs": "^1.11.13",
     "ioredis": "^5.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
-    "react-router": "^7.3.0",
-    "zod": "^3.24.2"
+    "react-router": "^7.3.0"
   },
   "publishConfig": {
     "access": "public"
   },
   "devDependencies": {
-    "@bonny-kato/localstorage": "^0.0.2",
-    "@bonnykato/simple-db": "^1.0.10",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@commitlint/types": "^19.8.0",
@@ -109,9 +71,7 @@
     "@typescript-eslint/parser": "^8.26.1",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "3.2.4",
-    "axios": "^1.8.3",
     "axios-mock-adapter": "^2.1.0",
-    "dayjs": "^1.11.13",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-react": "^7.37.4",
@@ -126,14 +86,13 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router": "^7.9.1",
-    "remix-toast": "^2.0.0",
     "rimraf": "^6.0.1",
     "standard-version": "^9.5.0",
     "tsc-alias": "^1.8.11",
+    "tsdown": "^0.15.6",
     "typescript": "^5.8.2",
-    "vite": "6.3.4",
-    "vitest": "^3.2.4",
-    "zod": "^3.24.2"
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.2.4"
   },
   "lint-staged": {
     "src/**/*.+(js|ts|tsx|jsx|json)": [
@@ -142,6 +101,15 @@
     ]
   },
   "dependencies": {
-    "vite-tsconfig-paths": "^5.1.4"
-  }
+    "@bonny-kato/localstorage": "^0.0.2",
+    "@bonnykato/simple-db": "^1.0.10",
+    "axios": "^1.8.3",
+    "dayjs": "^1.11.13",
+    "react-hook-form": "^7.54.2",
+    "remix-toast": "^2.0.0",
+    "zod": "^3.24.2"
+  },
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts"
 }
