refactor: replace ESLint with Oxlint and improve code consistency
- migrate from ESLint to Oxlint for static analysis and linting
- adjust build scripts to utilize Oxlint
- update `.oxlintrc.json` configuration with new rules and plugins
- remove `requireAccessToken` method and redundant annotations for cleanup
- simplify session handling and enhance session rotation logic
- fix schema order issues in `zod-common` and improve clarity
- enable test watch mode in Vitest configuration

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -1,11 +1,10 @@
 {
-  "categories": {
-    "correctness": "error"
-  },
-  "plugins": [
-    "react",
-    "promise",
-    "node",
-    "vitest"
-  ]
+    "categories": {
+        "correctness": "error"
+    },
+    "plugins": ["react", "promise", "node", "vitest", "jsdoc"],
+    "rules": {
+        "sort-vars": "error",
+        "sort-keys": "error"
+    }
 }
