--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,11 @@
 {
-    "semi": true,
-    "singleQuote": false,
-    "trailingComma": "es5",
-    "printWidth": 80,
-    "tabWidth": 4,
-    "plugins": [
-        "prettier-plugin-organize-imports"
-    ]
+  "semi": true,
+  "singleQuote": false,
+  "trailingComma": "es5",
+  "printWidth": 80,
+  "tabWidth": 4,
+  "plugins": [
+    "@prettier/plugin-oxc",
+    "prettier-plugin-organize-imports"
+  ]
 }
