--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "dev": "tsdown --watch",
     "build": "tsdown",
-    "lint": "eslint --config eslint.config.ts . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "oxlint",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "test": "vitest --typecheck",
     "release": "standard-version",
@@ -61,25 +61,20 @@
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@commitlint/types": "^19.8.0",
-    "@eslint/js": "^9.22.0",
+    "@prettier/plugin-oxc": "^0.0.4",
     "@types/axios-mock-adapter": "^1.10.4",
     "@types/ioredis-mock": "^8.2.6",
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "@typescript-eslint/eslint-plugin": "^8.26.1",
-    "@typescript-eslint/parser": "^8.26.1",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "3.2.4",
     "axios-mock-adapter": "^2.1.0",
-    "eslint": "^9.0.0",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.2.0",
     "husky": "^9.1.7",
     "ioredis": "^5.6.0",
     "ioredis-mock": "^8.9.0",
     "lint-staged": "^15.5.0",
+    "oxlint": "^1.22.0",
     "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
     "react": "^19.0.0",
@@ -96,7 +91,7 @@
   },
   "lint-staged": {
     "src/**/*.+(js|ts|tsx|jsx|json)": [
-      "eslint",
+      "oxlint",
       "prettier --write"
     ]
   },
