--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "r3-utils",
-  "version": "2.3.4",
+  "version": "2.3.5-beta.0",
   "description": "A library of reusable hooks, utilities, and components for React Router v7",
   "type": "module",
   "exports": {
