--- a/package.json
+++ b/package.json
@@ -1,142 +1,146 @@
 {
-    "name": "r3-utils",
-    "version": "2.3.5-beta.6",
-    "description": "A library of reusable hooks, utilities, and components for React Router v7",
-    "type": "module",
-    "exports": {
-        "./access-control": {
-            "types": "./dist/access-control/index.d.ts",
-            "import": "./dist/access-control/index.js"
-        },
-        "./cache": {
-            "types": "./dist/cache/index.d.ts",
-            "import": "./dist/cache/index.js"
-        },
-        "./hooks": {
-            "types": "./dist/hooks/index.d.ts",
-            "import": "./dist/hooks/index.js"
-        },
-        "./http-client": {
-            "types": "./dist/http-client/index.d.ts",
-            "import": "./dist/http-client/index.js"
-        },
-        "./auth": {
-            "types": "./dist/auth/index.d.ts",
-            "import": "./dist/auth/index.js"
-        },
-        "./utils": {
-            "types": "./dist/utils/index.d.ts",
-            "import": "./dist/utils/index.js"
-        },
-        "./zod-common": {
-            "types": "./dist/zod-common/index.d.ts",
-            "import": "./dist/zod-common/index.js"
-        },
-        "./package.json": "./package.json"
+  "name": "r3-utils",
+  "version": "2.3.5-beta.6",
+  "description": "A library of reusable hooks, utilities, and components for React Router v7",
+  "type": "module",
+  "exports": {
+    "./access-control": {
+      "types": "./dist/access-control/index.d.ts",
+      "import": "./dist/access-control/index.js"
     },
-    "files": [
-        "dist"
-    ],
-    "scripts": {
-        "dev": "tsdown --watch",
-        "build": "tsdown",
-        "lint": "oxlint",
-        "format": "prettier --write \"src/**/*.{ts,tsx}\"",
-        "pretest": "tsdown",
-        "test": "vitest --typecheck",
-        "prepare": "husky",
-        "typecheck": "tsc",
-        "lint-staged": "npx lint-staged",
-        "prepublishOnly": "pnpm run build",
-        "release:patch": "npm version patch && npm publish && git push --follow-tags",
-        "release:minor": "npm version minor && npm publish && git push --follow-tags",
-        "release:major": "npm version major && npm publish && git push --follow-tags",
-        "release:alpha": "npm version prepatch --preid alpha  && npm publish  --tag alpha && git push --follow-tags",
-        "release:beta:next": "npm version prerelease --preid beta && npm publish --tag beta && git push --follow-tags"
+    "./cache": {
+      "types": "./dist/cache/index.d.ts",
+      "import": "./dist/cache/index.js"
     },
-    "keywords": [
-        "react",
-        "react-router",
-        "hooks",
-        "utilities",
-        "components",
-        "typescript"
-    ],
-    "author": {
-        "name": "Bonny Kato",
-        "email": "6onnykato@gmail.com"
+    "./hooks": {
+      "types": "./dist/hooks/index.d.ts",
+      "import": "./dist/hooks/index.js"
     },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/Bonny-kato/r3-utils.git"
+    "./http-client": {
+      "types": "./dist/http-client/index.d.ts",
+      "import": "./dist/http-client/index.js"
     },
-    "homepage": "https://github.com/Bonny-kato/r3-utils#readme",
-    "bugs": {
-        "url": "https://github.com/Bonny-kato/r3-utils/issues"
+    "./auth": {
+      "types": "./dist/auth/index.d.ts",
+      "import": "./dist/auth/index.js"
     },
-    "license": "MIT",
-    "packageManager": "pnpm@10.14.0",
-    "peerDependencies": {
-        "ioredis": "^5.6.0",
-        "react": "^18.0.0 || ^19.0.0",
-        "react-dom": "^19.0.0",
-        "react-router": "^7.3.0"
+    "./utils": {
+      "types": "./dist/utils/index.d.ts",
+      "import": "./dist/utils/index.js"
     },
-    "publishConfig": {
-        "access": "public"
+    "./zod-common": {
+      "types": "./dist/zod-common/index.d.ts",
+      "import": "./dist/zod-common/index.js"
     },
-    "devDependencies": {
-        "@commitlint/cli": "^19.8.0",
-        "@commitlint/config-conventional": "^19.8.0",
-        "@commitlint/types": "^19.8.0",
-        "@prettier/plugin-oxc": "^0.0.4",
-        "@types/axios-mock-adapter": "^1.10.4",
-        "@types/ioredis-mock": "^8.2.6",
-        "@types/node": "^22.13.10",
-        "@types/react": "^19.0.10",
-        "@types/react-dom": "^19.0.4",
-        "@vitejs/plugin-react": "^4.3.4",
-        "@vitest/coverage-v8": "3.2.4",
-        "axios-mock-adapter": "^2.1.0",
-        "husky": "^9.1.7",
-        "ioredis": "^5.6.0",
-        "ioredis-mock": "^8.9.0",
-        "lint-staged": "^15.5.0",
-        "oxlint": "^1.23.0",
-        "prettier": "^3.5.3",
-        "prettier-plugin-organize-imports": "^4.1.0",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
-        "react-router": "^7.3.0",
-        "rimraf": "^6.0.1",
-        "tsdown": "^0.15.10",
-        "typescript": "^5.8.2",
-        "vite-tsconfig-paths": "^5.1.4",
-        "vitest": "^3.2.4"
-    },
-    "lint-staged": {
-        "src/**/*.+(js|ts|tsx|jsx|json)": [
-            "oxlint",
-            "prettier --write"
-        ]
-    },
-    "peerDependenciesMeta": {
-        "ioredis": {
-            "optional": true
-        }
-    },
-    "engines": {
-        "node": ">=20.0.0"
-    },
-    "dependencies": {
-        "@bonny-kato/localstorage": "^0.0.2",
-        "axios": "^1.8.3",
-        "dayjs": "^1.11.13",
-        "react-hook-form": "^7.54.2",
-        "remix-toast": "^2.0.0",
-        "zod": "^3.24.2"
-    },
-    "main": "./dist/index.js",
-    "module": "./dist/index.js",
-    "types": "./dist/index.d.ts"
+    "./package.json": "./package.json"
+  },
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "dev": "tsdown --watch",
+    "build": "tsdown",
+    "lint": "oxlint",
+    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "pretest": "tsdown",
+    "test": "vitest --typecheck",
+    "prepare": "husky",
+    "typecheck": "tsc",
+    "lint-staged": "npx lint-staged",
+    "prepublishOnly": "pnpm run build",
+    "release:patch": "npm version patch && npm publish && git push --follow-tags",
+    "release:minor": "npm version minor && npm publish && git push --follow-tags",
+    "release:major": "npm version major && npm publish && git push --follow-tags",
+    "release:alpha": "npm version prepatch --preid alpha  && npm publish  --tag alpha && git push --follow-tags",
+    "release:beta:next": "npm version prerelease --preid beta && npm publish --tag beta && git push --follow-tags",
+    "test:browser": "vitest --config=vitest.browser.config.ts"
+  },
+  "keywords": [
+    "react",
+    "react-router",
+    "hooks",
+    "utilities",
+    "components",
+    "typescript"
+  ],
+  "author": {
+    "name": "Bonny Kato",
+    "email": "6onnykato@gmail.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Bonny-kato/r3-utils.git"
+  },
+  "homepage": "https://github.com/Bonny-kato/r3-utils#readme",
+  "bugs": {
+    "url": "https://github.com/Bonny-kato/r3-utils/issues"
+  },
+  "license": "MIT",
+  "packageManager": "pnpm@10.14.0",
+  "peerDependencies": {
+    "ioredis": "^5.6.0",
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router": "^7.3.0"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
+    "@commitlint/types": "^19.8.0",
+    "@prettier/plugin-oxc": "^0.0.4",
+    "@types/axios-mock-adapter": "^1.10.4",
+    "@types/ioredis-mock": "^8.2.6",
+    "@types/node": "^22.13.10",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/browser-playwright": "^4.0.8",
+    "@vitest/coverage-v8": "3.2.4",
+    "axios-mock-adapter": "^2.1.0",
+    "husky": "^9.1.7",
+    "ioredis": "^5.6.0",
+    "ioredis-mock": "^8.9.0",
+    "lint-staged": "^15.5.0",
+    "oxlint": "^1.23.0",
+    "prettier": "^3.5.3",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router": "^7.3.0",
+    "rimraf": "^6.0.1",
+    "tsdown": "^0.15.10",
+    "typescript": "^5.8.2",
+    "vite": "^7.1.12",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest-browser-react": "^2.0.2"
+  },
+  "lint-staged": {
+    "src/**/*.+(js|ts|tsx|jsx|json)": [
+      "oxlint",
+      "prettier --write"
+    ]
+  },
+  "peerDependenciesMeta": {
+    "ioredis": {
+      "optional": true
+    }
+  },
+  "engines": {
+    "node": ">=20.0.0"
+  },
+  "dependencies": {
+    "@bonny-kato/localstorage": "^0.0.2",
+    "axios": "^1.13.2",
+    "dayjs": "^1.11.19",
+    "react-hook-form": "^7.54.2",
+    "remix-toast": "^2.0.0",
+    "vitest": "^4.0.8",
+    "zod": "^3.24.2"
+  },
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts"
 }
